--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
   </div>
 	<nav class="navbar navbar-dark bg-dark ">
 		<div class ="album">
-			<a style="color:white;" class="fa fa-fw fa-camera" href="#">Album</a>
+			<a style="color:white;" class="fa fa-fw fa-home" href="index.html">Home</a>
 			
 </div>
 	  
@@ -40,59 +40,37 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
-  <div class ="example">
-  	<h2>About Example</h2>
-  	<pre class="para">
-    Something short and leading about the collection below—its contents, the
-    creator, etc. Make it short and sweet, but not too short so folks don’t simply
-    skip over it entirely.
-  
-</pre>
-<a href='signup.html'><button type="button" class="btn btn-primary">Sign Up</button></a>
+</div>
 
 
-  </div>
-  <br>
-  <br>
-
- <div class="card-deck" style="overflow-x: hidden;">
-  <div class="card" >
-    <img class="card-img-top" src="lotus.JPG" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">It’s Not Whether You Get Knocked Down, It’s Whether You Get Up.</p>
-    </div>
-    <div class="card-footer">
-      <button type="button" class="btn btn-primary">Main call to action</button>
-	  
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="lotus.JPG" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">You Learn More From Failure Than From Success. Don’t Let It Stop You. Failure Builds Character.</p>
-    </div>
-    <div class="card-footer">
-      <button type="button" class="btn btn-primary">Main call to action</button>
-	      </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="lotus.JPG" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">The Best Way To Get Started Is To Quit Talking And Begin Doing.</p>
-    </div>
-    <div class="card-footer">
-      <button type="button" class="btn btn-primary" >Main call to action</button>
-	</div>
-
-  </div>
-  <br>
-
+<br>
+<br>
+<div class="container">
+  <form class="signup" action="index.html"method="post" enctype="multipart/form-data">
+    <h1>Please fill the form</h1>
+    <label for="usrname">Username</label>
+    <input type="text" id="usrname" name="usrname" required>
+    <label for="usrname">Address</label>
+    <input type="text" id="adress" name="adress" required>
+    <label for="usrname">Phone Number</label>
+    <input type="number" id="pnumber" name="pnumber" required>
+    <label for="document">Documents</label>
+    <input type="file" id="document" name="document" multiple>
+    <label for="psw">Password</label>
+    <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+    
+    <input type="submit" value="Submit">
+  </form>
 </div>
 <br>
-<br>
+
+<div id="message">
+  <h3>Password must contain the following:</h3>
+  <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+  <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+  <p id="number" class="invalid">A <b>number</b></p>
+  <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+</div>
 
 <!-- Footer -->
 <footer class="bg-dark text-center text-white">
@@ -182,13 +160,72 @@
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+
+</body>
+<script>
+var myInput = document.getElementById("psw");
+var letter = document.getElementById("letter");
+var capital = document.getElementById("capital");
+var number = document.getElementById("number");
+var length = document.getElementById("length");
+
+// When the user clicks on the password field, show the message box
+myInput.onfocus = function() {
+  document.getElementById("message").style.display = "block";
+}
+
+// When the user clicks outside of the password field, hide the message box
+myInput.onblur = function() {
+  document.getElementById("message").style.display = "none";
+}
+
+// When the user starts to type something inside the password field
+myInput.onkeyup = function() {
+  // Validate lowercase letters
+  var lowerCaseLetters = /[a-z]/g;
+  if(myInput.value.match(lowerCaseLetters)) {  
+    letter.classList.remove("invalid");
+    letter.classList.add("valid");
+  } else {
+    letter.classList.remove("valid");
+    letter.classList.add("invalid");
+  }
+  
+  // Validate capital letters
+  var upperCaseLetters = /[A-Z]/g;
+  if(myInput.value.match(upperCaseLetters)) {  
+    capital.classList.remove("invalid");
+    capital.classList.add("valid");
+  } else {
+    capital.classList.remove("valid");
+    capital.classList.add("invalid");
+  }
+
+  // Validate numbers
+  var numbers = /[0-9]/g;
+  if(myInput.value.match(numbers)) {  
+    number.classList.remove("invalid");
+    number.classList.add("valid");
+  } else {
+    number.classList.remove("valid");
+    number.classList.add("invalid");
+  }
+  
+  // Validate length
+  if(myInput.value.length >= 8) {
+    length.classList.remove("invalid");
+    length.classList.add("valid");
+  } else {
+    length.classList.remove("valid");
+    length.classList.add("invalid");
+  }
+}
+</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-</body>
 
 </html>
-  
